--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -37,7 +37,7 @@
                     />
 
             <Button
-                    android:enabled="@{model.entryValue.length() > 0}"
+                    android:enabled="@{model.entry.title.length() > 0}"
                     android:onClick="@{() -> model.onSaveButtonClicked()}"
                     android:background="@drawable/bg_rounded_dark_blue"
                     android:textColor="@color/white"
