--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="RecyclerView">
-        <attr name="adapter" />
+        <attr name="adapter"/>
     </declare-styleable>
+
+    <attr name="strikethrough" format="boolean"/>
+
 </resources>
