--- a/app/src/main/res/layout/item_shoping_list_entry.xml
+++ b/app/src/main/res/layout/item_shoping_list_entry.xml
@@ -15,16 +15,18 @@
             android:layout_height="40dp">
 
         <CheckBox
-                android:onCheckedChanged="@{(view, isChecked) -> model.onActiveCheckboxChanged(isChecked)}"
+                android:textColorSecondary="@color/white"
+                android:checked="@={!model.itemActive}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
 
         <TextView
-                android:text="@{model.item.title}"
+                android:text="@{model.itemTitle}"
                 android:textColor="@color/white"
                 tools:text="Alma (2 kg)"
+                android:ellipsize="end"
                 android:layout_weight="1"
-                app:strikethrough="@{model.item.active}"
+                app:strikethrough="@{!model.itemActive}"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:layout_width="0dp"
