--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,5 +5,7 @@
     </declare-styleable>
 
     <attr name="strikethrough" format="boolean"/>
+    <attr name="onTouchActionDown" />
+    <attr name="onTouchActionUp" />
 
 </resources>
