Added grouping feature

--- a/app/src/main/res/layout/item_shoping_list_entry.xml
+++ b/app/src/main/res/layout/item_shoping_list_entry.xml
@@ -9,8 +9,8 @@
                 name="model"
                 type="team.maci.shopping.list.components.list.components.item.viewmodel.ListItemViewModel"/>
 
-        <import type="team.maci.shopping.list.util.TouchListenerWrapper" />
-        <import type="android.view.MotionEvent" />
+        <import type="android.view.MotionEvent"/>
+        <import type="android.view.View" />
     </data>
 
     <LinearLayout
@@ -20,25 +20,70 @@
             android:layout_width="match_parent"
             android:layout_height="40dp">
 
-        <CheckBox
-                android:button="@drawable/selector_bg_checkbox"
-                android:textColorSecondary="@color/white"
-                android:checked="@={!model.itemActive}"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-
-        <TextView
-                android:text="@{model.itemTitle}"
-                android:textColor="@color/white"
-                tools:text="Alma (2 kg)"
-                android:ellipsize="end"
+        <LinearLayout
+                android:visibility="@{model.itemIsDelimiter ? View.GONE : View.VISIBLE}"
                 android:layout_weight="1"
-                app:strikethrough="@{!model.itemActive}"
-                android:singleLine="true"
-                android:maxLines="1"
                 android:layout_width="0dp"
-                android:gravity="center_vertical|left"
-                android:layout_height="match_parent"/>
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                >
+
+            <CheckBox
+                    android:button="@drawable/selector_bg_checkbox"
+                    android:textColorSecondary="@color/white"
+                    android:checked="@={!model.itemActive}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"/>
+
+            <TextView
+                    android:text="@{model.itemTitle}"
+                    android:textColor="@color/white"
+                    tools:text="Alma (2 kg)"
+                    android:ellipsize="end"
+                    android:layout_weight="1"
+                    app:strikethrough="@{!model.itemActive}"
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:layout_width="0dp"
+                    android:gravity="center_vertical|left"
+                    android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <LinearLayout
+                android:visibility="@{model.itemIsDelimiter ? View.VISIBLE : View.GONE}"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                >
+
+            <View
+                    android:background="@color/white"
+                    android:layout_width="0dp"
+                    android:layout_gravity="center"
+                    android:layout_weight=".3"
+                    android:layout_height="1dp"/>
+
+            <TextView
+                    tools:text="Group text"
+                    android:text="@{model.itemTitle}"
+                    android:textColor="@color/white"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <View
+                    android:background="@color/white"
+                    android:layout_width="0dp"
+                    android:layout_gravity="center"
+                    android:layout_weight=".3"
+                    android:layout_height="1dp"/>
+
+        </LinearLayout>
 
         <ImageButton
                 android:onClick="@{() -> model.onEditButtonClick()}"
