--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -24,14 +24,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:onClick="@{() -> model.onItemAddButtonClick()}"
-                android:src="@drawable/ic_add_black_24dp"
-                android:layout_gravity="right|bottom"
-                android:layout_margin="16dp"
-                app:backgroundTint="@color/dark_blue"
+        <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="right|bottom"
+                android:clipToPadding="false"
+                android:padding="16dp">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:onClick="@{() -> model.onDelimiterAddButtonClick()}"
+                    android:src="@drawable/ic_add_black_24dp"
+                    android:layout_gravity="right|bottom"
+                    android:layout_marginBottom="16dp"
+                    app:backgroundTint="@color/green"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:onClick="@{() -> model.onItemAddButtonClick()}"
+                    android:src="@drawable/ic_add_black_24dp"
+                    android:layout_gravity="right|bottom"
+                    app:backgroundTint="@color/dark_blue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
 
         <FrameLayout
                 android:background="@color/overlay"
